WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111203
getComputedStyle not implemented for -webkit-column-rule shorthand
https://bugs.webkit.org/show_bug.cgi?id=111203
Summary
getComputedStyle not implemented for -webkit-column-rule shorthand
Uday Kiran
Reported
2013-03-01 11:53:06 PST
Implement getcomputedstyle for webkit-column-rule
Attachments
Patch
(14.54 KB, patch)
2013-03-01 11:57 PST
,
Uday Kiran
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Uday Kiran
Comment 1
2013-03-01 11:57:57 PST
Created
attachment 191002
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-01 12:51:48 PST
Comment on
attachment 191002
[details]
Patch Clearing flags on attachment: 191002 Committed
r144485
: <
http://trac.webkit.org/changeset/144485
>
WebKit Review Bot
Comment 3
2013-03-01 12:51:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug