getComputedStyle not implemented for -webkit-column-rule shorthand https://bugs.webkit.org/show_bug.cgi?id=111203

Patch by Uday Kiran <udaykiran@motorola.com> on 2013-03-01
Reviewed by Alexis Menard.

Source/WebCore:

Implement getComputedStyle for -webkit-column-rule property.

Test: fast/css/getComputedStyle/getComputedStyle-column-rule.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add test to check getComputedStyle for -webkit-column-rule.

* fast/css/getComputedStyle/getComputedStyle-column-rule-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-column-rule.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@144485 bbb929c8-8fbe-4397-9dbb-9b2b20218538